crates/pixi-build-python/src/snapshots/pixi_build_python__tests__env_vars_are_set.snap
---
source: crates/pixi-build-python/src/main.rs
expression: generated_recipe.recipe.build.script
---
content: "[ ... script ... ]"
env:
  foo: bar
secrets: []
