crates/pixi-build-python/src/snapshots/pixi_build_python__tests__input_globs_includes_extra_globs_editable.snap
---
source: crates/pixi-build-python/src/main.rs
expression: result
---
Ok(
    {
        "Pipfile",
        "Pipfile.lock",
        "custom/*.py",
        "poetry.lock",
        "pyproject.toml",
        "requirements*.txt",
        "setup.cfg",
        "setup.py",
        "tox.ini",
    },
)
