crates/pixi-build-python/src/snapshots/pixi_build_python__tests__rust_compilers_create_extra_input_globs.snap
---
source: crates/pixi-build-python/src/main.rs
expression: result
---
Ok(
    {
        "**/*.py",
        "**/*.pyx",
        "**/*.rs",
        "**/Cargo.toml",
        "Pipfile",
        "Pipfile.lock",
        "poetry.lock",
        "pyproject.toml",
        "requirements*.txt",
        "setup.cfg",
        "setup.py",
        "tox.ini",
    },
)
